Complete Edit Attendance 100%

--- a/Sep2018_MVC/Sep2018_MVC.csproj
+++ b/Sep2018_MVC/Sep2018_MVC.csproj
@@ -349,7 +349,6 @@
     <Content Include="Areas\Staff\Assert\Images\img\friends\.DS_Store" />
     <Content Include="Areas\Staff\Assert\Images\img\portfolio\.DS_Store" />
     <Content Include="Areas\Staff\Views\AccountStaff\Index.cshtml" />
-
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Assert\Webfonts\fontawesome-webfont.eot" />
     <Content Include="Areas\Admin\Assert\Webfonts\fontawesome-webfont.ttf" />
@@ -365,14 +364,10 @@
     <Content Include="Areas\Admin\Assert\Font\glyphicons-halflings-regular.woff" />
     <Content Include="Areas\Admin\Views\Management\LoginAdmin.cshtml" />
     <Content Include="Areas\Admin\Views\Management\DemoLogin.cshtml" />
-
     <Content Include="Areas\Staff\Views\AccountStaff\ChangePassword.cshtml" />
     <Content Include="Areas\Staff\Views\AccountStaff\CreateAccount.cshtml" />
-
     <Content Include="Areas\Staff\Views\AccountStaff\Report.cshtml" />
-
     <Content Include="Areas\Staff\Views\AccountStaff\InformationAccountStaff.cshtml" />
-
     <None Include="Areas\Staff\Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Content\admin.css" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -445,6 +440,12 @@
     <Content Include="Areas\Staff\Assert\webfonts\fa-solid-900.woff" />
     <Content Include="Areas\Staff\Assert\webfonts\fa-solid-900.woff2" />
     <Content Include="Areas\Staff\Views\Teacher\CreateAccount.cshtml" />
+    <Content Include="Areas\Staff\Views\Shared\_SiderBarStaff.cshtml" />
+    <Content Include="Areas\Staff\Views\Shared\_SiderBarTeacher.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\Course.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\InformationAccount.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\History.cshtml" />
+    <Content Include="Areas\Staff\Views\Teacher\EditAttend.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -452,11 +453,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Staff\Views\Shared\_SiderBarStaff.cshtml" />
-    <Content Include="Areas\Staff\Views\Shared\_SiderBarTeacher.cshtml" />
-    <Content Include="Areas\Staff\Views\Teacher\Course.cshtml" />
-    <Content Include="Areas\Staff\Views\Teacher\InformationAccount.cshtml" />
-    <Content Include="Areas\Staff\Views\Teacher\History.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -498,11 +494,8 @@
     <Content Include="webfonts\fa-solid-900.woff2" />
     <Content Include="Areas\Staff\Views\Teacher\CheckOnline.cshtml" />
     <Content Include="Areas\Staff\Views\Teacher\Notifi.cshtml" />
-
     <Content Include="Views\Home\DetailMonHoc.cshtml" />
-
     <Content Include="Areas\Admin\Views\Shared\AdminLayout1.cshtml" />
-
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
