Add UTest GiangVienController Complete and create SinhvienControllerTest

--- a/Sep2018_MVC.Tests/Sep2018_MVC.Tests.csproj
+++ b/Sep2018_MVC.Tests/Sep2018_MVC.Tests.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Area\Staff\TeacherControllerTest.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Controllers\GiangvienControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
