Add 2 Unit Test Login_Student and viewIndex in AccountController

--- a/Sep2018_MVC.Tests/Sep2018_MVC.Tests.csproj
+++ b/Sep2018_MVC.Tests/Sep2018_MVC.Tests.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\GiangvienControllerTest.cs" />
     <Compile Include="Controllers\SinhvienControllerTest.cs" />
+    <Compile Include="Controllers\AccountControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
